src/style.css
/* ... */
body {
  background-color: #def2fd;
  position: relative;
}

.loading-screen {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 6px;
  background-color: #149cf9;
}
.loading-screen p {
  font-family: 'poppins';
  color: #fff;
}
.loading-screen p:first-of-type {
  font-size: 1.3rem;
  font-weight: 600;
}
.loading-screen img {
  width: 200px;
  aspect-ratio: 1;
}
.container {
  max-width: 500px;
  margin: 0 auto;
  padding: 0 30px 100px 30px;
  position: relative;
  min-height: 100vh;
  display: none;
}

.home-container {
  padding-top: 50px;
}

.search-container {
  max-width: 100%;
  display: flex;
  margin: 0;
  height: 45px;
  position: relative;
}

.search {
  box-sizing: border-box;
  width: 100%;
  border-radius: 30px;
  border: none;
  outline: none;
  font-size: 1.2rem;
  background-color: #333;
  transition: background-color 0.3s ease;
  padding: 0 50px 0 20px;
  font-family: 'poppins';
}
.search:hover,
.search:focus,
.search:active {
  background-color: white;
  outline: 2px solid #aaa;
}
.search-btn {
  width: 35px;
  height: 35px;
  border: none;
  background-color: lightsteelblue;
  border-radius: 50%;
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  top: 5px;
  right: 7px;
}
.search-btn svg:hover,
.search-btn svg:focus {
  cursor: pointer;
}

.weather-container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 20px;
  margin: 20px 0;
}

.info-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  font-family: 'poppins';
  background-color: #ddd;
  border-radius: 22px;
  padding: 10px 30px;
}

.place {
  margin-top: 40px;
  font-size: 1.6rem;
  font-weight: 600;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 4px;
  color: #000;
}

.temp {
  font-size: 3.5rem;
  font-weight: 600;
}
.temp-feel {
  font-size: 1.2rem;
  font-family: 'Libertinus+Math';
  font-weight: 600;
}

.cloud-condition {
  font-size: 1.3rem;
  align-self: flex-end;
}
.weather-info {
  margin: 0 auto;
  width: 100%;
  padding: 40px 0;
  border-radius: 22px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #149cf9;
}
.weather-info > div {
  display: flex;
  flex-direction: column;
  gap: 5px;
  align-items: center;
  text-align: left;
  width: 100%;
}
.weather-info > div:last-child {
  border-right: none;
}
.wind > p:first-of-type,
.humidity > p:first-of-type,
.rain > p:first-of-type {
  font-weight: 600;
}

.wind img,
.humidity img,
.rain img {
  height: 30px;
}
.astronomy {
  font-family: 'poppins';
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  gap: 12px;
}
.astronomy-time {
  font-weight: 600;
  font-size: 1.1rem;
}
.sun,
.moon {
  border-radius: 20px;
}

.sun {
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(40px);
  width: 100%;
  display: flex;
  justify-content: space-between;
  padding: 30px;
  box-shadow:
    0 8px 24px rgba(0, 0, 0, 0.12),
    inset 0 1px 0 rgba(255, 255, 255, 0.6),
    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
}
.sun > div {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}
.sunrise,
.sunset {
  width: 70px;
  aspect-ratio: 1;
  border-radius: 13px;
}
.sunrise {
  background-image: url('./images/sunrise.jpg');
  background-position: center;
  background-size: cover;
}
.sunset {
  background-image: url('./images/sunset.jpg');
  background-position: center;
  background-size: cover;
}
.moon {
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(40px);
  width: 100%;
  text-align: center;
  display: flex;
  justify-content: space-around;
  gap: 45px;
  padding: 30px 10px;
  box-shadow:
    0 8px 24px rgba(0, 0, 0, 0.12),
    inset 0 1px 0 rgba(255, 255, 255, 0.6),
    inset 0 -1px 2px rgba(0, 0, 0, 0.04);
}
.down {
  align-self: flex-end;
}
.moon-image {
  max-width: 150px;
  width: 100%;
  aspect-ratio: 1;
  border-radius: 50%;
  background-image: url('./images/moon.jpg');
  background-position: center;
  background-size: cover;
  animation: spin 50s linear infinite;
  box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
}

@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.small {
  font-size: 0.9rem;
}

.today {
  margin: 30px auto 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  max-width: 100%;
  color: #000;
}
.weather-today {
  text-align: center;
  margin-bottom: 20px;
  color: #222;
  font-size: 1.3rem;
  font-family: 'Libertinus+Math';
}
.hourly-weather {
  margin-top: 20px;
  display: flex;
  gap: 15px;
  width: 100%;
  overflow-x: auto;
  scrollbar-width: thin;
  scrollbar-color: lightslategray transparent;
}
.hourly-weather::-webkit-scrollbar {
  width: 2px;
}
.hourly-weather::-webkit-scrollbar-track {
  background: transparent;
}
.hourly-weather::-webkit-scrollbar-thumb {
  background: lightslategray;
  border-radius: 3px;
}
.hourly-weather::-webkit-scrollbar-thumb:hover {
  background: grey;
}
.hourly-weather > div {
  flex-shrink: 0;
  width: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 7px 10px;
  text-align: center;
  padding-bottom: 10px;
  color: #000;
}

.hourlyDataContainer > p:first-child {
  font-weight: 600;
  font-size: 1.1rem;
}
.hourly-weather-icon {
  height: 60px;
}
.nav-bar {
  max-width: 500px;
  width: 100%;
  background-color: #111;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 40px;
  position: fixed;
  bottom: 3px;
  right: 1px;
}
.nav-bar > button {
  border: none;
  background-color: inherit;
}
.daily-forecast {
  display: none;
  padding-top: 50px;
}

.days-forecast.fill > span:first-of-type,
.home.fill > span:first-of-type,
.fill > span:first-of-type {
  background-color: rgba(204, 204, 255, 0.3);
  border-radius: 30px;
}
/* ... */

